Fixed too small display for Address Quick View

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -58,8 +58,13 @@ select[size], select[multiple] {
 }
 
 #quick-lookup {
-  font-size: .5em;
+  font-size: 1.4em;
 }
+
+#attended_shows {
+  font-size: 12px;
+}
+
 .quick-lookup-history {
   color: gray;
   font-family: italic;
@@ -69,6 +74,6 @@ select[size], select[multiple] {
 }
 
 #quick-lookup h5 {
-  font-size: .6em;
+  font-size: 12px;
   color: gray;
 }
